v1/advanced/server-side-rendering.mdx
---
title: Server-side Rendering (SSR)
---

import { VueSpecific } from "/snippets/vue-specific.jsx";
import { ReactSpecific } from "/snippets/react-specific.jsx";
import { Svelte5Specific } from "/snippets/svelte5-specific.jsx";
import { Svelte4Specific } from "/snippets/svelte4-specific.jsx";
import { SvelteSpecific } from "/snippets/svelte-specific.jsx";

Server-side rendering pre-renders your JavaScript pages on the server, allowing your visitors to receive fully rendered HTML when they visit your application. Since fully rendered HTML is served by your application, it's also easier for search engines to index your site.

Server-side rendering uses Node.js to render your pages in a background process; therefore, Node must be available on your server for server-side rendering to function properly.

## Laravel starter kits

If you are using [Laravel Starter Kits](https://laravel.com/docs/starter-kits), Inertia SSR is [supported](https://laravel.com/docs/starter-kits#inertia-ssr) through a build command:

```bash
npm run build:ssr
```

## Install dependencies

If you are not using a Laravel starter kit and would like to manually configure SSR, we'll first install the additional dependencies required for server-side rendering. This is only necessary for the Vue adapters, so you can skip this step if you're using React or Svelte.

<CodeGroup>

```bash Vue icon="vuejs"
npm install @vue/server-renderer
```

```js React icon="react"
// No additional dependencies required
```

```js Svelte icon="code"
// No additional dependencies required
```

</CodeGroup>

## Add server entry-point

Next, we'll create a `resources/js/ssr.js` file within our Laravel project that will serve as our SSR entry point.

```bash
touch resources/js/ssr.js
```

This file is going to look very similar to your `resources/js/app.js` file, except it's not going to run in the browser, but rather in Node.js. Here's a complete example.

<CodeGroup>

```js Vue icon="vuejs"
import { createInertiaApp } from "@inertiajs/vue3";
import createServer from "@inertiajs/vue3/server";
import { renderToString } from "@vue/server-renderer";
import { createSSRApp, h } from "vue";

createServer((page) =>
    createInertiaApp({
        page,
        render: renderToString,
        resolve: (name) => {
            const pages = import.meta.glob("./Pages/**/*.vue", { eager: true });
            return pages[`./Pages/\${name}.vue`];
        },
        setup({ App, props, plugin }) {
            return createSSRApp({
                render: () => h(App, props),
            }).use(plugin);
        },
    }),
);
```

```jsx React icon="react"
import { createInertiaApp } from "@inertiajs/react";
import createServer from "@inertiajs/react/server";
import ReactDOMServer from "react-dom/server";

createServer((page) =>
    createInertiaApp({
        page,
        render: ReactDOMServer.renderToString,
        resolve: (name) => {
            const pages = import.meta.glob("./Pages/**/*.jsx", { eager: true });
            return pages[`./Pages/\${name}.jsx`];
        },
        setup: ({ App, props }) => <App {...props} />,
    }),
);
```

```js Svelte 4 icon="code"
import { createInertiaApp } from "@inertiajs/svelte";
import createServer from "@inertiajs/svelte/server";

createServer((page) =>
    createInertiaApp({
        page,
        resolve: (name) => {
            const pages = import.meta.glob("./Pages/**/*.svelte", {
                eager: true,
            });
            return pages[`./Pages/\${name}.svelte`];
        },
        setup({ App, props }) {
            return App.render(props);
        },
    }),
);
```

```js Svelte 5 icon="code"
import { createInertiaApp } from "@inertiajs/svelte";
import createServer from "@inertiajs/svelte/server";
import { render } from "svelte/server";

createServer((page) =>
    createInertiaApp({
        page,
        resolve: (name) => {
            const pages = import.meta.glob("./Pages/**/*.svelte", {
                eager: true,
            });
            return pages[`./Pages/\${name}.svelte`];
        },
        setup({ App, props }) {
            return render(App, { props });
        },
    }),
);
```

</CodeGroup>

When creating this file, be sure to add anything that's missing from your `app.js` file that makes sense to run in SSR mode, such as plugins or custom mixins.

### Clustering

By default, the SSR server will run on a single thread. Clustering starts multiple Node servers on the same port, requests are then handled by each thread in a round-robin way.

You can enable clustering by passing a second argument of options to `createServer`.

<CodeGroup>

```js Vue icon="vuejs"
import { createInertiaApp } from "@inertiajs/vue3";
import createServer from "@inertiajs/vue3/server";
import { renderToString } from "@vue/server-renderer";
import { createSSRApp, h } from "vue";

createServer(
    (page) =>
        createInertiaApp({
            // ...
        }),
    { cluster: true },
);
```

```jsx React icon="react"
import { createInertiaApp } from "@inertiajs/react";
import createServer from "@inertiajs/react/server";
import ReactDOMServer from "react-dom/server";

createServer(
    (page) =>
        createInertiaApp({
            // ...
        }),
    { cluster: true },
);
```

```js Svelte 4 icon="code"
import { createInertiaApp } from "@inertiajs/svelte";
import createServer from "@inertiajs/svelte/server";

createServer(
    (page) =>
        createInertiaApp({
            // ...
        }),
    { cluster: true },
);
```

```js Svelte 5 icon="code"
import { createInertiaApp } from "@inertiajs/svelte";
import createServer from "@inertiajs/svelte/server";
import { render } from "svelte/server";

createServer(
    (page) =>
        createInertiaApp({
            // ...
        }),
    { cluster: true },
);
```

</CodeGroup>

## Setup Vite

Next, we need to update our Vite configuration to build our new `ssr.js` file. We can do this by adding a `ssr` property to Laravel's Vite plugin configuration in our `vite.config.js`file.

```diff
export default defineConfig({
plugins: [
laravel({
input: ['resources/css/app.css', 'resources/js/app.js'],
\+     ssr: 'resources/js/ssr.js',
refresh: true,
}),
// ...
],
})
```

## Update npm script

Next, let's update the `build` script in our `package.json` file to also build our new `ssr.js` file.

```diff
"scripts": {
"dev": "vite",
\-   "build": "vite build"
\+   "build": "vite build && vite build --ssr"
},
```

Now you can build both your client-side and server-side bundles.

```bash
npm run build
```

## Running the SSR server

Now that you have built both your client-side and server-side bundles, you should be able run the Node-based Inertia SSR server using the following command.

```bash
php artisan inertia:start-ssr
```

You may use the `--runtime` option to specify which runtime you want to use. This allows you to switch from the default Node.js runtime to Bun.

```bash
php artisan inertia:start-ssr --runtime=bun
```

With the server running, you should be able to access your app within the browser with server-side rendering enabled. In fact, you should be able to disable JavaScript entirely and still navigate around your application.

## Client side hydration

Since your website is now being server-side rendered, you can instruct <VueSpecific>Vue</VueSpecific><ReactSpecific>React</ReactSpecific><SvelteSpecific>Svelte</SvelteSpecific> to "hydrate" the static markup and make it interactive instead of re-rendering all the HTML that we just generated.

<VueSpecific>
    To enable client-side hydration in a Vue app, update your `ssr.js` file to
    use `createSSRApp` instead of `createApp`.
</VueSpecific>
<ReactSpecific>
    To enable client-side hydration in a React app, update your `ssr.js` file to
    use `hydrateRoot` instead of `createRoot`.
</ReactSpecific>
<Svelte4Specific>
    To enable client-side hydration in a Svelte 4 app, set the `hydrate` option
    to `true` in your `ssr.js` file.
</Svelte4Specific>
<Svelte5Specific>
    To enable client-side hydration in a Svelte 5 app, update your `ssr.js` file
    to use `hydrate` instead of `mount` when server rendering.
</Svelte5Specific>

<CodeGroup>

```diff Vue icon="vuejs"
\- import { createApp, h } from 'vue'
\+ import { createSSRApp, h } from 'vue'
  import { createInertiaApp } from '@inertiajs/vue3'

  createInertiaApp({
    resolve: name => {
      const pages = import.meta.glob('./Pages/**/*.vue', { eager: true })
      return pages[`./Pages/\${name}.vue`]
    },
    setup({ el, App, props, plugin }) {
\-     createApp({ render: () => h(App, props) })
\+     createSSRApp({ render: () => h(App, props) })
        .use(plugin)
        .mount(el)
    },
  })
```

```diff React icon="react"
  import { createInertiaApp } from '@inertiajs/react'
\- import { createRoot } from 'react-dom/client'
\+ import { hydrateRoot } from 'react-dom/client'

  createInertiaApp({
    resolve: name => {
      const pages = import.meta.glob('./Pages/**/*.jsx', { eager: true })
      return pages[`./Pages/\${name}.jsx`]
    },
    setup({ el, App, props }) {
\-     createRoot(el).render(<App {...props} />)
\+     hydrateRoot(el, <App {...props} />)
    },
  })
```

```diff Svelte 4 icon="code"
   import { createInertiaApp } from '@inertiajs/svelte'

   createInertiaApp({
     resolve: name => {
       const pages = import.meta.glob('./Pages/**/*.svelte', { eager: true })
       return pages[`./Pages/\${name}.svelte`]
     },
    setup({ el, App, props }) {
\-     new App({ target: el, props })
\+     new App({ target: el, props, hydrate: true })
    },
   })
```

```diff Svelte 5 icon="code"
   import { createInertiaApp } from '@inertiajs/svelte'
\-  import { mount } from 'svelte'
\+  import { hydrate, mount } from 'svelte'

   createInertiaApp({
     resolve: name => {
       const pages = import.meta.glob('./Pages/**/*.svelte', { eager: true })
       return pages[`./Pages/\${name}.svelte`]
     },
     setup({ el, App, props }) {
\-      mount(App, { target: el, props })
\+      if (el.dataset.serverRendered === 'true') {
\+        hydrate(App, { target: el, props })
\+      } else {
\+        mount(App, { target: el, props })
\+      }
     },
   })
```

</CodeGroup>

<Svelte4Specific>

You will also need to set the `hydratable` compiler option to `true` in your `vite.config.js` file:

````diff
  import { svelte } from '@sveltejs/vite-plugin-svelte'
  import laravel from 'laravel-vite-plugin'
  import { defineConfig } from 'vite'

  export default defineConfig({
    plugins: [
      laravel.default({
        input: ['resources/css/app.css', 'resources/js/app.js'],
        ssr: 'resources/js/ssr.js',
        refresh: true,
      }),
\-     svelte(),
\+     svelte({
\+       compilerOptions: {
\+         hydratable: true,
\+       },
\+     }),
    ],
  })
```

</Svelte4Specific>

## Deployment

When deploying your SSR enabled app to production, you'll need to build both the client-side ( `app.js`) and server-side bundles (`ssr.js`), and then run the SSR server as a background process, typically using a process monitoring tool such as Supervisor.

```bash
php artisan inertia:start-ssr
````

To stop the SSR server, for instance when you deploy a new version of your website, you may utilize the `inertia:stop-ssr` Artisan command. Your process monitor (such as Supervisor) should be responsible for automatically restarting the SSR server after it has stopped.

```bash
php artisan inertia:stop-ssr
```

You may use the `inertia:check-ssr` Artisan command to verify that the SSR server is running. This can be helpful after deployment and works well as a Docker health check to ensure the server is responding as expected.

```bash
php artisan inertia:check-ssr
```

By default, a check is performed to ensure the server-side bundle exists before dispatching a request to the SSR server. In some cases, such as when your app runs on multiple servers or is containerized, the web server may not have access to the SSR bundle. To disable this check, you may set the `inertia.ssr.ensure_bundle_exists` configuration value to `false`.

### Laravel Cloud

To run the SSR server on Laravel Cloud, you may use Cloud's [native support for Inertia SSR](https://cloud.laravel.com/docs/compute#inertia-ssr).

### Laravel Forge

To run the SSR server on Forge, you should create a new daemon that runs `php artisan inertia:start-ssr` from the root of your app. Or, you may utilize the built-in Inertia integration from your Forge application's management dashboard.

Next, whenever you deploy your application, you can automatically restart the SSR server by calling the `php artisan inertia:stop-ssr` command. This will stop the existing SSR server, forcing a new one to be started by your process monitor.

### Heroku

To run the SSR server on Heroku, update the `web` configuration in your `Procfile` to run the SSR server before starting your web server.

```bash
web: php artisan inertia:start-ssr & vendor/bin/heroku-php-apache2 public/
```

Note, you must have the `heroku/nodejs` buildpack installed in addition to the `heroku/php` buildback for the SSR server to run.
